# ascii-art

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
.github/workflows/: rust.yml
projects/ascii-art-cli/: Cargo.toml
projects/ascii-art-cli/src/: errors.rs  lib.rs
projects/ascii-art-cli/src/detectors/: color.rs  edge.rs  mod.rs
projects/ascii-art-cli/src/renderer/: mod.rs
projects/ascii-art-core/: Cargo.toml
projects/ascii-art-core/src/: errors.rs  lib.rs
projects/ascii-art-core/src/canvas/: draw.rs  mod.rs  save.rs
projects/ascii-art-core/src/detectors/: mod.rs
projects/ascii-art-core/src/renderer/: data.rs  mod.rs
projects/ascii-art-core/tests/: main.rs
projects/ascii-art-web/: Cargo.toml  Readme.md  index.html
projects/ascii-art-web/assets/: main.scss
projects/ascii-art-web/src/: global.rs  main.rs
projects/ascii-art-web/src/ascii_view/: mod.rs
projects/ascii-art-web/src/braille_view/: mod.rs
projects/ascii-art-wl/: readme.md
projects/asciify-master/src/: main.rs
projects/braille-art-cli/src/: lib.rs
projects/braille-art-cli/tests/: main.rs
projects/braille-art-core/: Cargo.toml
projects/braille-art-core/src/: errors.rs  lib.rs
projects/braille-art-core/src/canvas/: draw.rs  mod.rs  save.rs
projects/braille-art-core/src/renderer/: mod.rs  mode.rs
projects/braille-art-core/tests/: main.rs  wolfram-wolf.txt
