[package]
name = "ascii-art"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
repository = "https://github.com/GalAster/ascii-art"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
image = "0.23"
rand = "0.7"
pix = "0.13"
imageproc = "0.21"
triangulation = "0.1"
bitflags = "1.2"


[dev-dependencies]

[features]
default = []
web = []
gpu = []